Refactoring + docs